# serializer version: 1
# name: test_diagnostics_of_a_cloud_only_entry
  dict({
    'board_manager_generation': None,
    'cloud_available': True,
    'cloud_configured': True,
    'connection': None,
    'entry': dict({
      'data': dict({
        'board_id': '**REDACTED**',
        'client_id': '**REDACTED**',
        'token': '**REDACTED**',
      }),
      'version': 2,
    }),
    'local': None,
    'local_available': False,
    'online_bridge': dict({
      'enabled': False,
    }),
    'poll_interval_seconds': None,
    'practice_game': None,
    'progress': None,
    'realtime_connected': False,
    'records': None,
    'reports': None,
    'tournament': None,
    'training_sessions': None,
  })
# ---
# name: test_diagnostics_of_a_named_match_with_a_bull_off
  dict({
    'board_manager_generation': 1,
    'cloud_available': False,
    'cloud_configured': False,
    'connection': dict({
      'access_denied': False,
      'board_manager_version': '1.0.7',
      'consecutive_failures': 0,
      'identity_valid': True,
      'last_error': None,
      'realtime': dict({
        'connected': False,
        'connects': 0,
        'failed_attempts': 0,
        'ignored_frames': 0,
        'last_close': None,
        'receiving': False,
        'reconnect_delay_seconds': 1,
      }),
      'system_api_misses': 0,
      'system_api_missing': False,
      'unknown_answers': list([
      ]),
    }),
    'entry': dict({
      'data': dict({
        'api_generation': 1,
        'board_id': '**REDACTED**',
        'host': '**REDACTED**',
        'local_only': True,
        'port': 3180,
      }),
      'version': 2,
    }),
    'local': dict({
      'camera_problems': list([
        False,
        False,
        False,
      ]),
      'camera_state': dict({
        'isOpened': False,
        'isRunning': False,
      }),
      'camera_stats': dict({
        'fps': list([
          29.9,
          30,
          29.8,
        ]),
      }),
      'local': dict({
        'connected': True,
        'event': 'Throw',
        'numThrows': 0,
        'running': True,
        'status': 'Throw',
        'throws': list([
        ]),
      }),
      'motion': dict({
        'isHand': False,
        'isStable': True,
        'isTakeoutFull': False,
        'isTakeoutPartial': False,
      }),
      'practice': dict({
        'average': None,
        'bot': None,
        'bull_off': None,
        'bust': False,
        'checkout': None,
        'darts': 0,
        'double_in': False,
        'double_out': True,
        'drill': None,
        'game': 501,
        'legs': list([
        ]),
        'legs_to_win': 1,
        'name': '**REDACTED**',
        'opened': True,
        'player': 1,
        'players': 2,
        'remaining': 501,
        'scores': list([
          dict({
            'average': None,
            'legs': 0,
            'match_legs': 0,
            'name': '**REDACTED**',
            'opened': True,
            'player': 1,
            'remaining': 501,
            'sets': 0,
            'start': 501,
          }),
          dict({
            'average': 180.0,
            'legs': 0,
            'match_legs': 0,
            'name': '**REDACTED**',
            'opened': True,
            'player': 2,
            'remaining': 321,
            'sets': 0,
            'start': 501,
          }),
        ]),
        'sets_to_win': 1,
        'setup': None,
        'start': 501,
        'summary': None,
        'teams': None,
        'undo': True,
        'visit': list([
        ]),
        'winner': None,
        'won': False,
      }),
      'quality': dict({
        'corrected': 0,
        'darts': 5,
        'rate': 0.0,
      }),
      'revision': 9,
      'settings': dict({
        'auto_calibrate': True,
        'auto_calibrate_on_start': True,
        'auto_distortion': False,
        'board_id': '**REDACTED**',
        'camera_count': 3,
        'standby_minutes': 15,
      }),
      'stats': dict({
        'fps': 12.5,
      }),
      'throws': list([
      ]),
      'training': dict({
        'active': True,
        'bulls': 2,
        'darts': 5,
        'doubles': 0,
        'ended': None,
        'highest_visit': 180,
        'hits': dict({
          '25': 1,
          'BULL': 1,
          'T20': 3,
        }),
        'manual_darts': 0,
        'misses': 0,
        'points': 255,
        'scores_100': 0,
        'scores_140': 0,
        'scores_180': 1,
        'triples': 3,
        'visits': 3,
      }),
      'version': '1.0.7',
    }),
    'local_available': True,
    'online_bridge': dict({
      'enabled': False,
    }),
    'poll_interval_seconds': 2.0,
    'practice_game': dict({
      'bot_delay': 2.0,
      'bot_level': 0,
      'bull_off': True,
      'bull_off_distance': False,
      'bull_off_running': False,
      'double_in': False,
      'double_out': True,
      'double_out_next': None,
      'game': 501,
      'legs_to_win': 1,
      'legs_total': 0,
      'manual_entry': False,
      'personal_routes': False,
      'players': 2,
      'sets_to_win': 1,
      'stored_legs': 0,
      'teams': False,
      'three_in_a_bed': True,
    }),
    'progress': dict({
      'achievements': True,
      'badges': 1,
      'logged_positions': 0,
      'players': 2,
      'session_positions': 0,
    }),
    'realtime_connected': False,
    'records': dict({
      'best_streak': 1,
      'daily_goal': 0,
      'double_attempts': 0,
      'player_profiles': 1,
      'stored_bests': 1,
      'stored_matches': 0,
      'streak': 1,
    }),
    'reports': dict({
      'journal_matches': 0,
      'journal_sessions': 0,
      'time': '00:00',
      'weekday': 0,
    }),
    'tournament': dict({
      'format': 'round_robin',
      'game': '501',
      'pause': 10,
      'players': 0,
      'random_draw': False,
      'running': None,
      'summary': 8,
      'third_place': False,
    }),
    'training_sessions': dict({
      'active': True,
      'auto_start': True,
      'idle_minutes': 0,
      'stored_sessions': 0,
    }),
  })
# ---
# name: test_diagnostics_of_board_manager_2
  dict({
    'board_manager_generation': 2,
    'cloud_available': False,
    'cloud_configured': False,
    'connection': dict({
      'access_denied': False,
      'board_manager_version': '2.0.0',
      'consecutive_failures': 0,
      'identity_valid': True,
      'last_error': None,
      'realtime': dict({
        'connected': False,
        'connects': 0,
        'failed_attempts': 0,
        'ignored_frames': 0,
        'last_close': None,
        'receiving': False,
        'reconnect_delay_seconds': 1,
      }),
      'system_api_misses': 0,
      'system_api_missing': False,
      'unknown_answers': list([
      ]),
    }),
    'entry': dict({
      'data': dict({
        'api_generation': 2,
        'board_id': '**REDACTED**',
        'host': '**REDACTED**',
        'local_only': True,
        'port': 3180,
      }),
      'version': 2,
    }),
    'local': dict({
      'board_pc': dict({
        'architecture': 'x86_64',
        'cpu_cores': 4,
        'cpu_model': 'Intel(R) Core(TM) i3-9100T CPU @ 3.10GHz',
        'kernel': '6.12.107+deb13-amd64',
        'opencv_version': '5.0.0',
        'os': 'linux',
        'platform': 'debian',
        'platform_version': '13',
        'vision_version': '2.0.0',
      }),
      'camera_problems': list([
        False,
        False,
        False,
      ]),
      'camera_state': dict({
        'isOpened': True,
        'isRunning': True,
      }),
      'camera_stats': dict({
        'fps': list([
          29.9,
          30,
          29.8,
        ]),
      }),
      'local': dict({
        'connected': True,
        'event': 'Stopped',
        'numThrows': 0,
        'running': False,
        'status': 'Stopped',
      }),
      'motion': dict({
        'isHand': False,
        'isStable': True,
        'isTakeoutFull': False,
        'isTakeoutPartial': False,
      }),
      'practice': dict({
        'bot': None,
        'bull_off': None,
        'double_in': False,
        'double_out': True,
        'drill': None,
        'game': None,
        'legs': list([
        ]),
        'legs_to_win': 1,
        'players': 1,
        'sets_to_win': 1,
        'summary': None,
        'teams': None,
        'undo': False,
      }),
      'quality': dict({
        'corrected': 0,
        'darts': 0,
        'rate': None,
      }),
      'revision': 0,
      'settings': dict({
        'auto_calibrate': True,
        'auto_calibrate_on_start': True,
        'auto_distortion': False,
        'board_id': '**REDACTED**',
        'camera_count': 3,
        'standby_minutes': 15,
      }),
      'stats': dict({
        'fps': 12.5,
      }),
      'system': dict({
        'cloud_link': 'connected',
        'cpu_percent': 12.5,
        'memory_bytes': 314363904,
        'update_available': '2.0.2',
      }),
      'throws': list([
      ]),
      'training': dict({
        'active': True,
        'bulls': 0,
        'darts': 0,
        'doubles': 0,
        'ended': None,
        'highest_visit': 0,
        'hits': dict({
        }),
        'manual_darts': 0,
        'misses': 0,
        'points': 0,
        'scores_100': 0,
        'scores_140': 0,
        'scores_180': 0,
        'triples': 0,
        'visits': 0,
      }),
      'version': '2.0.0',
    }),
    'local_available': True,
    'online_bridge': dict({
      'enabled': False,
    }),
    'poll_interval_seconds': 2.0,
    'practice_game': dict({
      'bot_delay': 2.0,
      'bot_level': 0,
      'bull_off': False,
      'bull_off_distance': False,
      'bull_off_running': False,
      'double_in': False,
      'double_out': True,
      'double_out_next': None,
      'game': None,
      'legs_to_win': 1,
      'legs_total': 0,
      'manual_entry': False,
      'personal_routes': False,
      'players': 1,
      'sets_to_win': 1,
      'stored_legs': 0,
      'teams': False,
      'three_in_a_bed': True,
    }),
    'progress': dict({
      'achievements': True,
      'badges': 0,
      'logged_positions': 0,
      'players': 0,
      'session_positions': 0,
    }),
    'realtime_connected': False,
    'records': dict({
      'best_streak': 0,
      'daily_goal': 0,
      'double_attempts': 0,
      'player_profiles': 0,
      'stored_bests': 0,
      'stored_matches': 0,
      'streak': 0,
    }),
    'reports': dict({
      'journal_matches': 0,
      'journal_sessions': 0,
      'time': '00:00',
      'weekday': 0,
    }),
    'tournament': dict({
      'format': 'round_robin',
      'game': '501',
      'pause': 10,
      'players': 0,
      'random_draw': False,
      'running': None,
      'summary': 8,
      'third_place': False,
    }),
    'training_sessions': dict({
      'active': True,
      'auto_start': True,
      'idle_minutes': 0,
      'stored_sessions': 0,
    }),
  })
# ---
